style.css
*, *::before, *::after {
    box-sizing: border-box;
}

:root {
    --ff-sans: 'Source Sans Pro', sans-serif;
    --ff-code: 'Source Code Pro', monospace;

    --fw-reg: 300;
    --fw-bold: 900;

    --clr-light: #fff;
    --clr-dark: rgb(0, 0, 0);
    --clr-accent: #47d4bd;

    --fs-h1: 4.5rem;
    --fs-h2: 3.75rem;
    --fs-h3: 1.5rem;
    --fs-body: 1.125rem;
}


body {
    background: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-sans);
    font-size: var(--fs-body);
    line-height: 1.6;
}

img {
    display: block;
    max-width: 100%;
}

section {
    display: grid;
    place-items: center;
    align-content: center;
    min-height: 100vh;
}

/* fonts */

strong {
    font-weight: var(--fw-bold);
}

h1, h2, h3 {
    line-height: 1.1;
    margin: 0;
}

h1 {
    font-size: var(--fs-h1);
}

h2 {
    font-size: var(--fs-h2);
}

h3 {
    font-size: var(--fs-h3);
}

/* titles */

.section-title {
    margin-bottom: .25rem;
    font-weight: var(--fw-reg);
}

.section-title strong {
    display: block;
}

.section-subtitle {
    margin: 0;
    font-size: var(--fs-h3);
}

.section-subtitle_accented {
    background: var(--clr-accent);
    font-family: var(--ff-code);
}

/* navbar */

.navbar {
    background-color: var(--clr-dark);
    overflow: hidden;
    z-index: 1;
}

.navbar a {
    float: right;
    color: var(--clr-accent);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: var(--fs-body);
}

.navbar a:hover {
    background-color: var(--clr-dark);
}

.navbar a:active {
    text-decoration: underline;
}

.navbar .cv {
    float: left;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 57px;
}

/* intro section */

.intro .section-title {
    padding-bottom: 20px;
}

.intro .section-title, .intro .section-subtitle {
    color: var(--clr-accent);
}

.intro .section-title strong {
    color: var(--clr-dark);
}

.intro .section-subtitle_accented {
    color: var(--clr-dark)
}

/* skills section */

.skills p, li {
    font-size: var(--fs-h3);
}

.skills p {
    font-weight: var(--fw-bold);
}

.skills li {
    font-family: var(--ff-code);
    list-style: none;

}

.skill-container {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    margin: 10px;
    float: right;
    background-color: var(--clr-accent);
    border-radius: 5px;
    height: 150px;
    width: 150px;
}

/* projects */

.projects p {
    font-family: var(--ff-sans);
}

.repo-link {
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
    color: var(--clr-accent);
    text-decoration: none;
}

/* footer */

footer {
    background: #111;
    color: var(--clr-accent);
    text-align: center;
    padding: 2.5em 0;
}

footer a {
    color: inherit;
    text-decoration: none;
}

.social-link {
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
}

.social-list {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 2em 0;
    padding: 0;
}

.social-item {
    margin: 0 .5em;
    font-size: var(--fs-h1);
}

.social-link:hover, .social-item:hover {
    opacity: .7;
}

/* hidden content */

.hidden {
    opacity: 0;
    filter: blur(5px);
    transform: translateX(-100%);
    transition: all 1s;
}

@media(prefers-reduced-motion) {
    .hidden {
        transition: none;
    }
}

.show {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

.skills-list:nth-child(2) {
    transition-delay: 200ms;
}

.skills-list:nth-child(3) {
    transition-delay: 400ms;
}

.skills-list:nth-child(4) {
    transition-delay: 600ms;
}

.skills-list:nth-child(5) {
    transition-delay: 800ms;
}

.skills-list:nth-child(6) {
    transition-delay: 1000ms;
}

.skills-list:nth-child(7) {
    transition-delay: 1200ms;
}

.skills-list:nth-child(8) {
    transition-delay: 1400ms;
}

/* media query */

@media (max-width: 800px) {
    :root { 
        --fs-h1: 3rem;
        --fs-h2: 2.25rem;
        --fs-h3: 1.25rem;
        --fs-body: 1rem;
    }

    .skill-container {
        height: 50px;
        width: 50px;
    }

    .skills li {
        font-size: 7px;
    }
}

